crates/doodle-core/tests/snapshots/diag_render__zero_width_span_at_end_of_input.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"greet.doodle\", source))"
---
error[unterminated-string]: this string is never closed
  --> greet.doodle:2:13
2 |   say("hello
  |             ^
